# databridge-etl-tools

./: .gitignore  .travis.yml  Dockerfile  Dockerfile-311  Dockerfile-312  Dockerfile-312-airflow  Dockerfile-313  Dockerfile-airflow  Dockerfile.fast  README.md  docker-fast-requirements.txt  pyproject.toml  requirements.txt  setup.py
.github/workflows/: airflow.yml  test_deploy_ecr.yml  test_pr_build.yml
databridge_etl_tools/: __init__.py  ago.py  carto_.py  cli.py  postgres.py  utils.py
databridge_etl_tools/ago/: ago.py  ago_commands.py
databridge_etl_tools/ais_geocoder/: ais_geocoder.py
databridge_etl_tools/carto/: carto_.py
databridge_etl_tools/db2/: db2.py  db2_commands.py
databridge_etl_tools/knack/: knack.py  knack_commands.py
databridge_etl_tools/opendata/: opendata.py
databridge_etl_tools/oracle/: oracle.py  oracle_commands.py
databridge_etl_tools/postgres/: _cleanup.py  _properties.py  _s3.py  postgres.py  postgres_commands.py  postgres_connector.py
databridge_etl_tools/sharepoint/: sharepoint.py  sharepoint_commands.py
tests/: conftest.py  test_ago.py  test_postgres.py  test_sharepoint.py
