# pyproject docs: https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

# Disable autodiscovery of package folders, only use dbtools dir
[tools.setuptools]
py_modules = ['databridge_etl_tools']

[tool.setuptools.packages.find]
where = ["."]
exclude = ["venv*", "tests*", "docs*"]

[project]
name = "databridge-etl-tools"
version = "1.5.0" 
description = "Command line tools to extract and load SQL data to various endpoints"
authors = [
    {name = "citygeo", email = "maps@phila.gov"},
]
requires-python = ">=3.11,<3.14"
readme = "README.md"
license = "MIT"
dependencies = [
    "geopetl @ git+https://github.com/CityOfPhiladelphia/geopetl.git@oracle-default-fix",
    "setuptools",
    "boto3",
    "botocore",
    "certifi",
    "chardet",
    "click",
    "docutils",
    "future",
    "idna",
    "jmespath",
    "moto",
    "mock",
    "petl",
    "pyrestcli",
    "python-dateutil",
    "pyproj",
    "pytz",
    "requests",
    "s3transfer",
    "six",
    "numpy",
    "Shapely",
    "psycopg",
    "psycopg2-binary",
    "six",
    "carto",
    "moto",
    "pandas",
    "pytest",
    "requests-mock",
    "stringcase", 
    "hurry.filesize", 
    "smart_open", 
    "retrying",
    "azure-core", # Necessary for sharepoint
    "azure-identity", # Necessary for sharepoint
    "msgraph-core", # Necessary for sharepoint
    "msgraph-beta-sdk", # Necessary for sharepoint
    "openpyxl" # Necessary for sharepoint
]

# installs our command as a cli runnable script
[project.scripts]
databridge_etl_tools = "databridge_etl_tools.cli:main"
